# myVPNproject

./: .gitignore  .gitmodules  AUDIT_AND_ROADMAP.md  B4_Android_DPI_Bypass_Guide.md  BUILD_ANALYSIS_REPORT.md  BUILD_ERRORS.md  NATIVE_ENGINE_SETUP.md  README.md  TUN2SOCKS_AND_ECH_PLAN.md  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android.yml  build.yml
app/: build.gradle.kts  build.gradle.kts_dep_fix  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/makskbz/myvpnproject/: MainActivity.kt
app/src/main/java/com/makskbz/myvpnproject/vpn/: BypassVpnService.kt  ChecksumUtils.kt  ConfigManager.kt  CrashLogger.kt  DnsInterceptor.kt  DohResolver.kt  Ipv6Connectivity.kt  NetworkProfileDetector.kt  PacketProcessor.kt  ProtectSocketServer.kt  ProxyEngine.kt
app/src/main/jni/: CMakeLists.txt  ciadpi_jni.c  crash_handler.c  crash_handler.h  tun2socks_jni.c
app/src/main/jni/badvpn/system/: BNetwork.c  BTime.h
app/src/main/jni/badvpn/tun2socks/: tun2socks.c  tun2socks_bridge.h
app/src/main/jni/byedpi/: conev.c  conev.h  desync.c  desync.h  error.h  extend.c  extend.h  kavl.h  mpool.c  mpool.h  packets.c  packets.h  params.h  proxy.c  proxy.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/makskbz/myvpnproject/vpn/: ChecksumUtilsTest.kt  DnsInterceptorTest.kt  NetworkProfileDetectorTest.kt  PacketProcessorIpv6Test.kt
scripts/: activate_native.sh
